improviment featured player video
